css/styles.css
body {
	box-sizing: border-box;
	font-family: 'K2D', sans-serif;
	min-width: var(--min-width);
	width: 100vw;
}

body.modal-open {
	/* hide scrolling when modal open */
	overflow: hidden;
  }

header {
	display: flex;
	justify-content: space-between;
	align-items: center;
	background: #333;
	position: fixed;
	top: 0;
	width: 100%;
	z-index: 2;
}

h1 {
	padding: 0 0.5em;
	font-size: 3.5em;
	margin: 0;
	color: #fff;
}

h2, h3 {
	padding: 0;
	margin: 0;
	color: white;
	text-align: center;
}

nav ul {
	list-style: none;
	display: grid;
	grid-template-columns: 1fr 1fr 1fr;	
}

nav ul li {
	padding: .5em 1em;
	margin: .5em 1em;
	border-radius: 10px;
	background: #A61919;
	color: white;
	text-align: center;
	font-size: 1.5em;
}

.nav-bars {
	display: none;
}

#banner {
	height: 100vh;
	background: url('../images/keyboard.jpg') no-repeat 0 -40px fixed;
	background-size: cover;
	font-size: 2.5em;
	position: relative;
	top: 0;
	overflow: hidden;
	min-width: var(--min-width);
}

#projectSlider {
	height: 100vh;
}

#sliderHeading {
	font-size: 2em;
	color: black;
	padding: 1em;

}


#slider {
	height: 80vh;
	width: 75vw;
	margin: 0 auto;
	position: relative;
	top: 15vh;
}


#slider ::selection {
	color: inherit;
	background: transparent;
  }
  
#slider-frame {
	border: 1px solid #fff;
	border-radius: 3px;
	box-shadow: 0 0 5px #333;
	position: relative;
}
  
#slider-prev,
#slider-next {
	width: 5%;
	height: 100%;
	position: absolute;
	top: 0;
	display: flex;
	padding: 1em;
	color: #fff;
	font-weight: bold;
	text-shadow: 0 0 2px #000;
	transition: 0.5s;
	cursor: pointer;
 }
  
  #slider-prev:hover,
  #slider-next:hover {
	background: rgba(255,255,255,0.3);
  }
  
  #slider-prev {
	left: 0;
	flex-direction: row;
	align-items: center;
  }
  
  #slider-next {
	right: 0;
	flex-direction: row-reverse;
	align-items: center;
  }
  
  #slider-frame {
	background: #ccc;
	background-repeat: no-repeat;
	background-position: center;
	background-size: cover;
  	height: 24em;
  }
  
#slider-frame [data-src] {
	display: none;
}
  
#slider-caption {
	margin-top: 5px;
	border-radius: 3px;
	border: 1px solid #ccc;
	padding: 0.2em 0.5em;
	font-size: 1em;
	text-align: center;
	transition: 0.5s;
	height: 5vh;
	font-weight: 700;
	color: black;
}
  
#slider-caption.flash {
	transition: 0s;
	background: #ccc;
}

#headshot {
	height: 100%;
	width: 40%;
	border: 1px solid black;
	background-image: url("../images/stanleyheadshot.jpg"); /* The image used */
	background-color: #fff; /* Used if the image is unavailable */
	background-position: center; /* Center the image */
	background-repeat: no-repeat; /* Do not repeat the image */
	background-size: cover; /* Resize the background image to cover the entire container */
}

#profiles {
	list-style: none;
	font-size: 20px;
	margin: 0;
	padding-left: 2em;
}

#profiles li {
	margin: 30px;
}

#profiles li:first-child {
	margin-top: 0;
}

#profiles a {
	color: black;
}

#profiles img {
	width: 50px;
	height: 50px;
	border: none;
}

.icon {
	position: relative;
	top: 15px;
	left: -10px;
}

#aboutMe h4 {
	padding: 1em;
}

#overlay {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	background-color: rgba(44, 44, 40, 0.6);
    position: absolute;
    top: 0;
    left: 0;
    width: 100vw;
	height: 100vh;
} 

nav ul li:hover {
	background-color: rgb(90, 24, 24);
}

a {
	text-decoration: none;
}

#aboutMe {
	height: 100vh;
	display: grid;
	grid-template-columns: repeat(2, 1fr);
	justify-items: center;
	align-items: start;
	border-top: solid 1vh #777;
}

#info, #contact {
	display: flex;
	flex-direction: column;
	align-items: center;
	width: 50vw;
	height: 80vh;
	position: relative;
	top: 18vh;
	min-width: 450px;
	max-width: 775px;
}

#bio, #skills {
	padding: 0 4em;
	margin-top: 0;
	
}

#skills-heading {
	font-weight: 700;
	padding: 0 4em;
	margin-bottom: 0;
	margin-top: 0;
}

.arrow-down {
	width: 0; 
	height: 0; 
	border-left: 15vh solid transparent;
	border-right: 15vh solid transparent;
	border-top: 15vh solid #777;
	position: absolute;
	left: 50%;
	margin-left: -15vh;
} 

#projects {
	border-top: 10px solid #777;
	min-width: var(--min-width);
	height: 125vh;
}

h6 {
	text-align: center;
	font-size: 1.5em;
}

h4 {
	font-size: 2em;
	text-align: center;
	margin: 0;
}

#projects h4 {
	position: relative;
	top: 25vh;
}

#project-grid {
	display: grid;
	grid-template-columns: 1fr 1fr 1fr;
	justify-items: center;
	align-items: center;
	position: relative;
	top: 25vh;
	min-width: var(--min-width);
	grid-column-gap: 1.66%;
	margin: 0 40px;
}

#project-grid a {
	color: black;
}

#project-grid article {
	width: 100%;
	height: 600px;
	overflow: hidden;
	min-width: 300px;
}

#film-reviews {
	background-image: url("../images/filmreviews.png");
}

#virtual-pets-amok {
	background-image: url("../images/virtualpetsamok.jpg");
}

#virtual-pet-shelter {
	background-image: url("../images/virtualpetshelter.jpg");
}

#film-reviews, #virtual-pets-amok, #virtual-pet-shelter {
	background-color: #cccccc; /* Used if the image is unavailable */
	height: 50%; /* You must set a specified height */
	background-position: center; /* Center the image */
	background-repeat: no-repeat; /* Do not repeat the image */
	background-size: cover; /* Resize the background image to cover the entire container */
	min-width: 300px;
}

.project-skills {
	font-weight: 700;
}

footer {
	background: #333;
	color: white;
	display: grid;
	grid-template-columns: repeat(2, 1fr);
	align-items: center;
}

#footer-first-column {
	padding: 4em 6em;
	display: flex;
	justify-content: space-around;
	align-items: center;
}

#footer-first-column img {
	width: 3em;
}

#footer-second-column {
	display: flex;
	flex-direction: column;
	justify-content: flex-end;
	padding-left: 3em;
}

.svg {
	filter: invert(1);
	margin: 1em;
}

#backdrop {
	position: fixed;
	top: 5vh;
	left: 0;
	width: 100vw;
	height: 100vh;
	background: rgba(0,0,0,0.7);
  
	display: none;
	align-items: flex-end;
	justify-content: center;
}
  
.modal-open #backdrop {
	display: flex;
}
  
#modal {
	width: 80vw;
	height: 70vh;
	background: #fff;
	padding: 1em;
	border-radius: 5px;
	box-shadow: 0 0 5px 5px #333;
	margin-bottom: 10vh;
}
  
#modal h4 {
	float: left;
}
  
#modal button {
	float: right;
  
	background: #eee;
	padding: 5px 10px;
	border: 0;
	border-radius: 3px;
  
	cursor: pointer;
}
  
#modal button:hover {
	color: #fff;
	background: #999;
}
  
#modal #modal-content {
	clear: both;
	padding-top: 1em;
}

#modal-info, #modal-contact {
	display: flex;
	flex-direction: column;
	align-items: center;
	width: 50%;
	height: 65vh;
	min-width: 450px;
	max-width: 775px;
}

#modal-aboutMe {
	height: 100%;
	display: grid;
	grid-template-columns: repeat(2, 1fr);
	justify-items: center;
	align-items: start;
}

#modal-aboutMe h4 {
	padding: .25em;
}

#modal-headshot {
	height: 50px;
	width: 40%;
	border: 1px solid black;
	background-image: url("../images/stanleyheadshot.jpg"); /* The image used */
	background-color: #fff; /* Used if the image is unavailable */
	background-position: center; /* Center the image */
	background-repeat: no-repeat; /* Do not repeat the image */
	background-size: cover; /* Resize the background image to cover the entire container */
}
	

.closeDescription {
	display: none;
}

.openDescription {
	display: block;
}

@media screen and (max-width: 1120px) {

	#banner {
		background-position: 0 0;
	}

	h1 {
		font-size: 2em;
	}

	nav ul li {
		font-size: 1.1em;
	}

		
	#modal-aboutMe {
		grid-template-columns: repeat(1, 1fr);
	}

	#modal-info {
		display: none;
	}
}

@media screen and (max-width: 1050px) {

	#project-grid {
		grid-template-columns: 1fr 1fr;
	}

	#projects {
		height: 200vh;
	}
}

@media screen and (max-width: 950px) {

	#aboutMe {
		height: 200vh;
		grid-template-columns: repeat(1, 1fr);
		border-top: solid 1vh #777;
	}
}

@media screen and (max-width: 760px) {

	nav {
	 	display: flex;
		flex-flow: column;
	}
	
	header {
		flex-direction: column;
	
		
	}

	.nav-bars {
		display: block;
		margin-right: 20px;
		display: flex;
		justify-content: flex-end;
	}

	nav a {
		display: none;
		grid-column-start: 3;
		grid-column-end: 4;
		width: 100vw;
	}

	nav.open a {
		display: block;
	}

	h1 {
		font-size: 2em;
		display: inline;
	}

	#left-header {
		display: flex;
		justify-content: space-between;
		width: 100%;
		padding: 1em;
		position: relative;
		margin-bottom: -25px;
	}

	.fa-bars {
		font-size: 1.5em;
		color: white;
		display: block;
		position: absolute;
		top: 50%;
		margin-top:-.5em;
	}

	nav ul {
		padding: 0;
	}

	nav ul li {
		/* font-size: 1em; */
		margin: 0;
		border-radius: 0%;
	}

	#project-grid {
		grid-template-columns: 1fr;
	}

	#projects {
		height: 300vh;
	}
}

@media screen and (max-width: 600px) {
	
	footer {
		grid-template-columns: repeat(1, 1fr);
	}

}

 

 

